[package]
name = "fpa"
version = "0.1.0"
authors = ["Marijon Pierre <pierre.marijon@inria.fr>"]

[dependencies]
csv            = "1"
xz2            = "0.1"
clap           = "2.31.2"
regex          = "1"
bzip2          = "0.3.3"
serde          = "1.0"
flate2         = "1.0"
lazy_static    = "1"
serde_derive   = "1.0"
enum_primitive = "0.1.1"

