[package]
name = "fpa_lr"
version = "0.4.0"
authors = ["Pierre Marijon <pierre.marijon@inria.fr>"]

description = "fpa filter long read mapping information to save disk space"

homepage = "https://github.com/natir/fpa"
repository = "https://github.com/natir/fpa"
readme = "Readme.md"
license = "MIT"
keywords = ["bioinformatics", "long-read"]

[badges]
travis-ci = { repository = "natir/fpa", branch = "master" }

[dependencies]
csv            = "1"
xz2            = "0.1"
clap           = "2.31.2"
regex          = "1"
bzip2          = "0.3.3"
serde          = "1.0"
flate2         = "1.0"
petgraph       = "0.4"
lazy_static    = "1"
serde_derive   = "1.0"
enum_primitive = "0.1.1"

[[bin]]
name = "fpa"
path = "src/main.rs"
