[package]
name = "fpa_lr"
version = "0.5.1"
authors = ["Pierre Marijon <pierre.marijon@inria.fr>"]
edition = "2018"

description = "fpa filter long read mapping information to save disk space"

homepage = "https://github.com/natir/fpa"
repository = "https://github.com/natir/fpa"
readme = "Readme.md"
license = "MIT"
keywords = ["bioinformatics", "long-read"]

[badges]
travis-ci = { repository = "natir/fpa", branch = "master" }

[dependencies]
csv            = "1"
clap           = "3.0.0-beta.1"
regex          = "1"
serde          = "1"
niffler        = "2"
petgraph       = "0.4"
lazy_static    = "1"
serde_derive   = "1"

[[bin]]
name = "fpa"
path = "src/main.rs"
